--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,20 @@
-.cat_image {
+
+.animalSerotonin {
+    box-sizing: border-box;
+    display:flex;
+    justify-content: center;
+    align-items: right;
+
+    
+}
+
+.catPic{
     margin: 0% 25% 0%;
     width: 50%;
-    height: 25%;
-    border-radius: 10px;
-    border: 5px double gray;
-  }
-  .cat_information {
+    height: 10%;
+}
+  
+/* .cat_information {
     display: grid;
     justify-content: center;
-  }
+} */
