--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,15 @@ body {
     margin: 0px;
     background-color: aqua;
 }
-img {
+/* img {
     
     overflow-clip-margin: 20px;
     overflow: clip;
-}
+} */
 
 .animalSerotonin {
-    margin: auto;
-    box-sizing: border-box;
+    /* margin: auto;
+    box-sizing: border-box; */
     display:flex;
     justify-content: left;
     align-items: left;
@@ -27,17 +27,16 @@ img {
 } 
 
 
-
-
-
-/* #catPic{
-    margin: 0% 25% 0%;
-    width: 50%;
-    height: 10%;
-    border-color: cyan;
-} */
+#catPic{
+   
+    max-width: 300px;
+    max-height: 300px;
+    
+}
   
-/* .cat_information {
-    display: grid;
-    justify-content: center;
-} */
+#dogPic{
+   
+    max-width: 300px;
+    max-height: 300px;
+    
+}
