--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,54 @@
  
-/* * {
+* {
     box-sizing: border-box; 
+    margin: 0;
+    padding: 0;
     font-family: 'Roboto', sans-serif;
-} */
-
-
-body {
-    margin: 0px;
-    background-color: aqua;
 }
-/* img {
-    
-    overflow-clip-margin: 20px;
-    overflow: clip;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: purple;
+}
+
+#bg{
+    display: grid;
+    /* justify-content: center; */
+    place-items: center;
+    max-width: 100%;
+    padding:0;
+    margin:0;
+    background-color: black;
+
+
+}
+img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* opacity: 0.8; */
+}
+
+
+/* .overlay {
+    position: absolute;
+    top: 0;
+    left:0;
+    width: 10%;
+    height: %;
+    object-fit: cover;
+    background: #03a9fa;
+
 } */
+
+
+img {
+    
+    
+}
 
 .animalSerotonin {
     /* margin: auto;
