--- a/css/style.css
+++ b/css/style.css
@@ -3,23 +3,60 @@
     box-sizing: border-box; 
     margin: 0;
     padding: 0;
+    /* background-color: blue; */
     font-family: 'Roboto', sans-serif;
 }
-body {
-    display: flex;
+/* body {
+    /* display: flex;
     justify-content: center;
     align-items: center;
     background-color: purple;
+} */ */
+
+li, a {
+    font-weight: 500;
+    font-size: 16 px;
+    color: #edf0f1;
+
 }
 
-#bg{
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+    background-color: blueviolet;
+
+}
+.navBarLinks {
+    list-style: none;
+
+}
+
+.navBarLinks li{
+    display: inline-block;
+    padding: 0px 20px;
+    /* background-color: blueviolet; */
+
+}
+.navBarLinks li a{
+    color: black;
+
+}
+
+
+
+
+.bg{
     display: grid;
     /* justify-content: center; */
     place-items: center;
     max-width: 100%;
-    padding:0;
-    margin:0;
-    background-color: black;
+    padding:20px;
+    margin:20px;
+    border: black;
+    border-spacing: 10px;
+
 
 
 }
