--- a/css/style.css
+++ b/css/style.css
@@ -6,59 +6,87 @@
     /* background-color: blue; */
     font-family: 'Roboto', sans-serif;
 }
-/* body {
+body {
     /* display: flex;
     justify-content: center;
-    align-items: center;
-    background-color: purple;
-} */ */
+    align-items: center; */
+    background: url(/coffee-house-scene.png);
+    background-size: cover;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
 
-li, a {
+    /* background-color: purple; */
+}
+header {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    /* justify-content: flex;
+    align-items: center;
+    position:fixed; */
+    z-index: 99;
+    /* padding: 30px 20%; */
+    background-color: blueviolet;
+    box-shadow: 0 0 10px #000;
+
+}
+
+.title {
+    
+    cursor: pointer;
+    padding: 10px 50px;
+}
+/* .nav {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+} */
+li, a{
     font-weight: 500;
     font-size: 16 px;
     color: #edf0f1;
 
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
-    background-color: blueviolet;
 
 }
 .navBarLinks {
     list-style: none;
-
+    /* display: flex;
+    justify-content: space-evenly; */
 }
 
 .navBarLinks li{
     display: inline-block;
-    padding: 0px 20px;
-    /* background-color: blueviolet; */
+    padding: 0px 50px;
+    background-color: blueviolet;
+    float: right;
+    
 
 }
 .navBarLinks li a{
     color: black;
 
 }
+/* img {
+    position: relative;
+    min-height: 100%;
+    min-width: 1024px;
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+}     */ */
 
-
-
-
-.bg{
+/* .bg{
     display: grid;
-    /* justify-content: center; */
+    justify-content: center;
     place-items: center;
     max-width: 100%;
     padding:20px;
     margin:20px;
     border: black;
     border-spacing: 10px;
-
-
-
 }
 img {
     position: absolute;
@@ -67,7 +95,7 @@ img {
     width: 100%;
     height: 100%;
     /* opacity: 0.8; */
-}
+/* }  */
 
 
 /* .overlay {
@@ -79,7 +107,7 @@ img {
     object-fit: cover;
     background: #03a9fa;
 
-} */
+}
 
 
 img {
@@ -90,7 +118,7 @@ img {
 .animalSerotonin {
     /* margin: auto;
     box-sizing: border-box; */
-    display:flex;
+    /* display:flex;
     justify-content: left;
     align-items: left;
     background-color: blue;
@@ -111,4 +139,4 @@ img {
     max-width: 300px;
     max-height: 300px;
     
-}
+} */
