--- a/css/style.css
+++ b/css/style.css
@@ -3,80 +3,92 @@
     box-sizing: border-box; 
     margin: 0;
     padding: 0;
-    /* background-color: blue; */
     font-family: 'Roboto', sans-serif;
 }
-body {
+header {
+    height: 80px;
+    background: transparent;
+    color: white;
+}
+.nav{
+    display: flex;
+    justify-content: space-around;
+    /* height:inherit; */
+
+}
+
+.logo{
+
+}
+
+.navBarLinks {
+    list-style: none;
+}
+
+.navBarLinks li{
+    display: inline-block;
+    padding: 20px 50px;
+    background-color: blueviolet;
+}
+.navBarLinks li a{
+    color: black;
+
+}  
+li, a{
+    font-weight: 1000;
+    font-size: 16 px;
+    color: #edf0f1;
+}
+/* body { */
     /* display: flex;
     justify-content: center;
     align-items: center; */
-    background: url(/coffee-house-scene.png);
-    background-size: cover;
-    height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
+   
 
     /* background-color: purple; */
-}
-header {
-    width: 100%;
+/* } */
+/* .header { */
+    /* width: 100%;
     height: 100px;
     display: flex;
     /* justify-content: flex;
     align-items: center;
     position:fixed; */
-    z-index: 99;
-    /* padding: 30px 20%; */
+    /* z-index: 99;
+    padding: 20px 20%;
     background-color: blueviolet;
-    box-shadow: 0 0 10px #000;
+    box-shadow: 0 0 10px #000; */
 
-}
+/* }  */
 
-.title {
+/* .title {
+   justify-content: left; 
     
-    cursor: pointer;
-    padding: 10px 50px;
 }
-/* .nav {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-} */
+
 li, a{
-    font-weight: 500;
+    font-weight: 1000;
     font-size: 16 px;
     color: #edf0f1;
-
-
 }
 .navBarLinks {
     list-style: none;
-    /* display: flex;
-    justify-content: space-evenly; */
+    
+   
 }
 
 .navBarLinks li{
     display: inline-block;
-    padding: 0px 50px;
+    padding: 20px 50px;
     background-color: blueviolet;
-    float: right;
     
 
 }
 .navBarLinks li a{
     color: black;
 
-}
-/* img {
-    position: relative;
-    min-height: 100%;
-    min-width: 1024px;
-    width: 100%;
-    height: auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-}     */ */
+}  */
+
 
 /* .bg{
     display: grid;
@@ -96,26 +108,16 @@ img {
     height: 100%;
     /* opacity: 0.8; */
 /* }  */
+/* } */
 
 
-/* .overlay {
-    position: absolute;
-    top: 0;
-    left:0;
-    width: 10%;
-    height: %;
-    object-fit: cover;
-    background: #03a9fa;
-
-}
 
 
-img {
     
     
-}
 
-.animalSerotonin {
+
+/* .animalSerotonin { */
     /* margin: auto;
     box-sizing: border-box; */
     /* display:flex;
