--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ header {
 
 }
 
-.about {
+/* .about {
     
     width: 100%;
     margin: 4 em auto;
@@ -35,10 +35,11 @@ header {
     line-height: 30px;
     text-align: center;
     
-}
+} */
 .about{
     display: center; 
     justify-content: center;
+    text-align: center;
     width: 70%;
     padding: 10px, 20px;
 
@@ -81,6 +82,9 @@ nav ul li {
 
 } 
 .row{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 
 
 }
