--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ html, body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
 }
 body { 
      
@@ -49,7 +51,7 @@ main{
     text-align: center;
     flex-direction: column;
     width: 70%;
-    padding: 10px, 20px;
+    padding: 200px, 20px;
     border: 1px solid black;
 
 }
@@ -61,19 +63,23 @@ main{
 .title {
     position:fixed;
     color: white;
-    background-color: purple;
+    /* background-color: rgba(128,0,128,0.8); */
     margin-left: 20px;
     margin-bottom: 10px;
+    backdrop-filter: blur(10px);
 }
 nav{
     position: fixed;
     width: 100%;
+    z-index: 10;
+    backdrop-filter: blur(10px);
+    background-color: rgba(128,0,128,0.8);
     
 } 
 nav ul {
     list-style: none;
     color: white;
-    background-color: purple;
+    /* background-color: purple; */
     overflow: hidden;
     padding: 0;
     margin:0;
@@ -153,7 +159,7 @@ nav ul li {
 } 
 
 
-#catPic{
+#animalPic{
    
     max-width: 300px;
     max-height: 300px;
