--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ header {
     /* height: 100%; */
     width: 100%;
     height:100vh;
-    background: url(/assets/coffee-house-scene.png);
+    background: url("/assets/coffee-house-scene.png");
     background-size: cover; 
     background-attachment:fixed;
     background-position: center;
