--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ header {
     /* height: 100%; */
     width: 100%;
     height:100vh;
-    background: url("https://github.com/GKFitz/coder-Break-Cafe/blob/db372c9b57388ee0bd71652174970b26c8eecef8/assets/coffee-house-scene.png");
+    background: url("https://raw.githubusercontent.com/GKFitz/coder-Break-Cafe/db372c9b57388ee0bd71652174970b26c8eecef8/assets/coffee-house-scene.png");
     background-size: cover; 
     background-attachment:fixed;
     background-position: center;
